fix: update frontend UI
